syntax = "proto3";

package protogen;

option go_package = "github.com/TofuOverdose/pi-user-service/internal/users/ports/grpc/protogen";

service UsersService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserById (GetUserByIdRequest) returns (User) {}
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string last_name = 2;
    uint32 age = 3;
}

message CreateUserResponse {
    string user_id = 1;
}

message GetUserByIdRequest {
    string user_id = 1;
}

message ListUsersRequest {
    ListUsersSort sort_order = 1;
}

message ListUsersResponse {
    repeated User data = 1;
}

message User {
    string id = 1;
    string name = 2;
    string last_name = 3;
    uint32 age = 4;
    int64 recording_date = 5;
}

message ListUsersSort {
    string field = 1;
    string order = 2;
}